# tomography

./: .gitignore  CMakeLists.txt  README.md  config.example.env  conv_backproj.cpp  conv_backproj.f77  conv_backproj.for  radon.cpp  randgrid.py
inc/: algo.h  area_gen.h  area_generator.h  geom.h  geometry.h  glob.h  globals.h  nummeth.h  quadratures.h  radon.h  util.h  utilities.h
msc/: conv_backproj.cpp  conv_backproj.for  randgrid.py
src/: algo.cpp  geom.cpp  geometry.cpp  main.cpp  nummeth.cpp  quadratures.cpp  radon.cpp  util.cpp  utilities.cpp
